2005-08-14  Davyd Madeley  <davyd@madeley.id.au>

	* battstat_applet.c: Add (x,y) hints to the notification call. This
	  exposes another bug in the notification-daemon which needs to be
	  plugged.

2005-08-08  Davyd Madeley  <davyd@madeley.id.au>

	* battstat_applet.glade: change labels on radiobuttons to make them
	  less of a gratuitious lie.

2005-08-01  Ryan Lortie  <desrt@desrt.ca>

	* battstat-hal.c: Do time remaining calculations internally on
	  multiple battery systems.

	  The algorithm for the calculation of time remaining on multiple
	  battery systems is essentially an extension of the calculation that
	  HAL is doing internally for single battery systems anyway with
	  the added advantage that we'll get sane numbers on multiple-battery
	  systems.

	  This means that we have full control over calculating the time
	  remaining on multiple-battery systems so that any changes in how
	  HAL does this do not affect us.  Since the topic of how to handle
	  time remaining on multiple-battery systems in HAL is still up in
	  the air and this code needs some time to be tested before 
	  GNOME 2.12, this is the version of the code that I would like to
	  ship (modulo any bug reports, of course).

2005-07-31  Ryan Lortie  <desrt@desrt.ca>

	* battstat-hal.c: Code cleanup to support multiple battery systems
	  instead of just reporting information on the first battery.  This
	  code assumes that the appropriate changes will be made to HAL
	  as outlined in the comments in the code.  For single-battery
	  systems, in any case, the change will have no effect.

	  In the event that this doesn't happen in time for GNOME 2.12, I
	  will add code to compensate for it.

	  Added code to honour the "present" flag.  You can now pop the
	  battery out of your laptop while battstat is running and it will
	  do the right thing and display "No battery present" in the tooltip.

	  Added code to make sure we don't accidentally monitor UPSes or the