@@ -1,3 +1,11 @@
+2005-08-25  Ryan Lortie  <desrt@desrt.ca>
+
+	* battstat_applet.c:
+	* power-management.c:
+	* battstat.h: Add support for the user disabling HAL via a GConf key.
+	  Also add support for the user to find out if they are currently
+	  using HAL.
+
 2005-08-14  Davyd Madeley  <davyd@madeley.id.au>
 
 	* battstat_applet.c: Add (x,y) hints to the notification call. This
